--- a/kwai.html
+++ b/kwai.html
@@ -57,12 +57,6 @@
 <center><h2 id="use-o-código-promocional-e-já-começe-com-um-bonus-especial">Use o código promocional e já começe com um BONUS ESPECIAL:</h2></center>
 <center><h2 id="código-promocional-kwai877092568">Código Promocional: Kwai877092568</h2></center>
 
-<center><h2 id="o-kwai-é-diferente-de-muitas-outras-redes-sociais-ou-seja-é-considerada-a-rede-social-mais-fácil-e-rápida-de-ganhar-dinheiro-pois-não-exige-um-certo-número-de-seguidores-para-monetizar-o-seu-conteúdo-no-kwaiele-é-total-gratuito-e-permite-que-todos-os-seus-usuários-possam-se-divertir-nele-vendo-vídeos-criando-e-compartilhando-vídeos-convidando-os-amigos-e-ainda-poder-lucrar-com-isto">
-O kwai é diferente de muitas outras redes sociais, ou seja, é considerada a rede social mais fácil e rápida de ganhar dinheiro pois 
-não exige um certo número de seguidores para monetizar o seu conteúdo no kwai,ele é total gratuito e permite que todos os seus usuários possam se 
-divertir nele vendo vídeos, criando e compartilhando vídeos, convidando os amigos e ainda poder lucrar com isto. Aproveita e corre enquanto ainda há esta OPORTUNIDADE, pois ela pode acabar</h2></center>
-<center><h2 id="aproveita-e-corre-enquanto-ainda-há-esta-oportunidade-pois-ela-pode-acabar"></h2></center>
-
 <center><h2 id="passo-a-passo-de-como-usar-o-kwai-e-continuar-ganhando">PASSO A PASSO DE COMO USAR O KWAI E CONTINUAR GANHANDO:</h2></center>
 
 <center><h2 id="1-baixe-o-app-no-link-abaixo">1. Baixe o app no link abaixo:</h2></center><center><h2><a href="https://bit.ly/aplicativo-kwai" class="btn btn-primary">https://bit.ly/aplicativo-kwai</a></h2></center>
@@ -83,7 +77,11 @@ divertir nele vendo vídeos, criando e compartilhando vídeos, convidando os ami
 
 <center><h2 id="9-crie-e-compartilhe-vídeos-no-app-para-ganhar-ainda-mais">9. Crie e compartilhe vídeos no app para ganhar ainda mais</h2></center>
 
-
+<center><h2 id="o-kwai-é-uma-uma-rede-social-diferente-de-muitas-outras-redes-sociais-ou-seja-é-considerada-a-rede-social-mais-fácil-e-rápida-de-ganhar-dinheiro-pois-não-exige-um-certo-número-de-seguidores-para-monetizar-o-seu-conteúdo-no-kwaiele-é-total-gratuito-e-permite-que-todos-os-seus-usuários-possam-se-divertir-nele-vendo-vídeos-criando-e-compartilhando-vídeos-convidando-os-amigos-e-ainda-poder-lucrar-com-isto">
+O kwai é uma rede social diferente de muitas outras redes sociais, ou seja, é considerada a rede social mais fácil e rápida de ganhar dinheiro pois 
+não exige um certo número de seguidores para monetizar o seu conteúdo no kwai, ele é total gratuito e permite que todos os seus usuários possam se 
+divertir nele vendo vídeos, criando e compartilhando vídeos, convidando os amigos e ainda poder lucrar com isto. Aproveita e corre enquanto ainda há esta OPORTUNIDADE, pois ela pode acabar</h2></center>
+<center><h2 id="aproveita-e-corre-enquanto-ainda-há-esta-oportunidade-pois-ela-pode-acabar"></h2></center>
       
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
