--- a/kwai.html
+++ b/kwai.html
@@ -66,7 +66,7 @@
 
 <center><h2 id="3-selecione-kwai-gold-para-entrar-na-página-de-atividade">3. Selecione “Kwai Gold” para entrar na página de atividade</h2></center>
 
-<center><h2 id="4-e-vincule-o-código-promocional">4. E vincule o código promocional</h2></center><center><h2 id="código-kwai877092568">Código: kwai877092568</h2></center>
+<center><h2 id="4-e-vincule-o-código-promocional">4. Vincule o código promocional e já começe com um BONUS ESPECIAL</h2></center><center><h2 id="código-kwai877092568">Código: kwai877092568</h2></center>
 
 <center><h2 id="5-assista-vídeos-para-continuar-lucrando-no-kwai">5. Assista vídeos para continuar lucrando no kwai</h2></center>
 
