--- a/kwai.html
+++ b/kwai.html
@@ -52,7 +52,7 @@
     <div class="container-lg px-3 my-5 markdown-body">
 
 
-<center><h2 id="passo-a-passo-de-como-usar-o-kwai-ganhar-dinheiro-e-ainda-se-divertir-muito-com-isso">PASSO a PASSO de como USAR O kwai, GANHAR dinheiro e ainda se DIVERTIR muito com isso:</h2></center>
+<center><h2 id="passo-a-passo-de-como-usar-o-kwai-ganhar-dinheiro-e-ainda-se-divertir-muito-com-isso">PASSO a PASSO de como USAR o kwai, GANHAR dinheiro e ainda se DIVERTIR muito com isso:</h2></center>
 <center><h2 id="uma-observação-é-muito-importante-que-você-complete-todas-as-missões-diárias-para-ganhar-ainda-mais-dinheiro-no-kwai">UMA OBSERVAÇÃO: É muito IMPORTANTE que você complete todas as MISSÕES DIÁRIAS para GANHAR ainda mais dinheiro no kwai</h2></center>
 
 <center><h2 id="1-baixe-o-app-no-link-abaixo-e-entre-no-app">1. Baixe o app no link abaixo e entre no app:</h2></center><center><h2><a href="https://bit.ly/aplicativo-kwai" class="btn btn-primary">https://bit.ly/aplicativo-kwai</a></h2></center>
